syntax = "proto3";

// The protobuf package name would result in a generated Golang package name of
// google_basicpersonality_v1
package google.basicpersonality.v1;

import "google/api/annotations.proto";

// But using this option ensures that the generated Golang package name is more
// appropriate
option go_package = "github.com/DazWilkin/basic-personality/protos";
option java_package = "com.google.basicpersonality";

service BasicPersonality {
  rpc PutThing(ThingRequest) returns (ThingResponse) {
    // Define HTTP mapping
    // Requires the import above
    option (google.api.http) = {
      post: "/v1/things"
      body: "thing"
    };
  };
  rpc GetThing(ThingRequest) returns (ThingResponse) {
    // Define HTTP
    // Requires the import above
    // TODO(dazwilkin) REST API is non-functional: what to GET? A simple type?
    // Digest?
    option (google.api.http) = {
      get: "/v1/thing"
    };
  };
  rpc WaitThing(ThingRequest) returns (ThingResponse) {

  }
}
message ThingRequest {
  Thing thing = 1;
  Extra extra = 2;
}
message ThingResponse {
  string status = 1;
}
message Thing {
  string name = 1;
}
message Extra {
  string name = 1;
}